Fixed transparent overlay not filling screen, partial fix to notification button overflow

--- a/css/style.css
+++ b/css/style.css
@@ -423,9 +423,6 @@ input[type=range]::-ms-fill-upper {
 	text-decoration: none;
 	font-weight: bold;
 }
-#notification .main {
-	padding-bottom: 2px;
-}
 #notification ul {
 	margin-left: 30px;
 	color: #FFF;
@@ -440,10 +437,11 @@ input[type=range]::-ms-fill-upper {
 	color: #FFF;
 }
 #notification .buttons {
-	padding: 5px;
+	padding-bottom: 5px;
 	margin: auto;
 }
 #notification .buttons .button {
+	margin-top: 5px;
 	min-width: 100px;
 }
 #mainSetup .audioFreq span,#mainSetup .audioVolume span {
